[workspace]
members     = [
    "scene", 
]

[patch.crates-io]
flo_scene               = { path = "./scene" }

flo_binding             = { git = "https://github.com/Logicalshift/flo_binding", branch = "v3.0" }
desync                  = { git = "https://github.com/Logicalshift/desync", branch = "v0.9" }
