[workspace]
members     = [
    "scene",
    "macros",
    "pipe",
    "wasm",
]
resolver    = "2"

[patch.crates-io]
flo_scene               = { path = "./scene" }
flo_scene_macros        = { path = "./macros" }
flo_scene_pipe          = { path = "./pipe" }
flo_scene_wasm          = { path = "./wasm" }
