[package]
name            = "flo_talk"
version         = "0.1.0"
edition         = "2021"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/Logicalshift/flo_scene"
description     = "A scripting language for message passing applications, derived from SmallTalk and designed for use with the flo_scene crate"
categories      = [ "concurrency", "data-structures" ]
keywords        = [ "flotalk", "smalltalk", "scripting" ]

[features]
default         = [ "crossterm", "tokio", "tui" ] 

[[bin]]
name            = "flo_talk"

[dependencies]
flo_talk_macros = "0.1"
flo_stream      = "0.7"

futures         = "0.3"
once_cell       = "1.16"
smallvec        = "1.10"
rand            = "0.8"

crossterm       = { version = "0.25", optional = true }
tui             = { version = "0.19", optional = true }
tokio           = { version = "1.25", optional = true }
