[package]
name            = "flo_talk_macros"
version         = "0.1.0"
edition         = "2021"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/Logicalshift/flo_scene"
description     = "Macros for the flotalk language"
categories      = [ "concurrency", "data-structures" ]
keywords        = [ "flotalk", "smalltalk", "scripting" ]

[lib]
proc-macro      = true

[dependencies]
syn             = { version = "1.0", features = [ "derive" ] }
quote           = "1.0"
once_cell       = "1.16"
proc-macro2     = "1.0"
