[package]
name            = "flo_scene_pipe"
version         = "0.2.0"
edition         = "2021"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/Logicalshift/flo_scene"
description     = "Inter-scene and inter-process communication for flo_scene"
categories      = [ "concurrency", "data-structures" ]
keywords        = [ "message-queue" ]

[features]
default         = [ "auto-start" ]
auto-start      = [ ]

[dependencies]
flo_scene       = { version = "0.2", features = [ "serde_support", "tokio" ] }
serde           = { version = "1.0", features = [ "derive" ] }
serde_json      = { version = "1.0" }
ron             = "0.8"
uuid            = { version = "1.0", features = [ "v4" ] }
once_cell       = "1.18"
futures         = "0.3"
tokio           = { version = "1.37", features = [ "net", "io-util" ] }
desync          = "0.8"
flo_stream      = "0.7"
regex-automata  = "0.4"
itertools       = "0.13"

[dev-dependencies]
tokio           = { version = "1.37", features = [ "net", "io-util", "rt", "rt-multi-thread", "macros" ] }
