[package]
name            = "flo_scene"
version         = "0.2.0"
edition         = "2021"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/Logicalshift/flo_scene"
description     = "Entity-messaging system for composing large programs from small programs"
categories      = [ "concurrency", "data-structures" ]
keywords        = [ "message-queue" ]

[dependencies]
desync          = "0.9"
futures         = "0.3"
