[package]
name            = "flo_scene"
version         = "0.2.0"
edition         = "2021"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/Logicalshift/flo_scene"
description     = "Entity-messaging system for composing large programs from small programs"
categories      = [ "concurrency", "data-structures" ]
keywords        = [ "message-queue" ]

[features]
serde_support   = [ "serde", "uuid/serde" ]
rkyv_support    = [ "rkyv" ]
json            = [ "serde_support", "serde_json" ]
guest_programs  = [ "serde_support", "rkyv_support" ]
tokio_support   = [ "tokio" ]

[dependencies]
once_cell       = "1.18"
futures         = "0.3"
futures-timer   = "3.0"
uuid            = { version = "1.0", features = [ "v4" ] }
serde           = { version = "1.0", features = [ "derive" ], optional = true }
serde_json      = { version = "1.0", optional = true }
tokio           = { version = "1.37", features = [ "rt" ], optional = true }
rkyv            = { version = "0.7", optional = true }

[dev-dependencies]
serde_json      = { version = "1.0" }
