[workspace]
members     = [ "raw_wasm",
    "wasi_test",
    "raw_wasm",
    "bindgen",
]
resolver    = "2"

[patch.crates-io]
flo_scene                   = { path = "../scene" }
flo_scene_wasm_wasi_test    = { path = "./wasi_test" }
flo_scene_wasm_raw_test     = { path = "./raw_wasm" }
flo_scene_wasm_bindgen_test = { path = "./bindgen" }
